# pokemon_csv_upload

crates/upload_pokemon_data/: Cargo.toml  create-tables.sql
crates/upload_pokemon_data/src/: db.rs  main.rs  pokemon_csv.rs
