[package]
name = "upload_pokemon_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
color-eyre = "0.6.2"
csv = "1.1.6"
indicatif = "0.17.1"
ksuid = "0.2.0"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-rustls"]}
tokio = { version = "1.21.2", features = ["macros"] }
